fixed margin issue on smaller screens

--- a/stylesheets/partials/features/_contact-form.scss
+++ b/stylesheets/partials/features/_contact-form.scss
@@ -99,3 +99,11 @@
 	outline: none;
   	box-shadow: 0px 0px 2px blue;
 }
+
+@media screen and (max-width: $container-sm) {
+	.contact-form {
+		margin-left: -15px;
+		margin-right: -15px;
+		padding: 15px 30px;
+	}
+}
